--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,10 @@ services:
       dockerfile: Dockerfile
     env_file:
       - .env
+    depends_on:
+      postgres:
+        condition: service_healthy
+        restart: true
     ports:
       - "${PORT}:${PORT}"
     networks:
@@ -40,7 +44,7 @@ services:
       test: wget --no-verbose --tries=1 --spider http://localhost:${PORT}/healthcheck || exit 1
       interval: 30s
       retries: 3
-      start_period: 20s
+      start_period: 30s
       timeout: 30s
     deploy:
       replicas: 1
